chore: avoid text wrap on mobile simplified agenda module

--- a/src/scss/agenda.scss
+++ b/src/scss/agenda.scss
@@ -281,6 +281,9 @@
                       display: inline-block;
                       margin-right: 10px;
                     }
+                    .name, .prefix {
+                      white-space: nowrap;
+                    }
                   }
                 }
                 &:not(:first-child) {
